# ceema

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md
cmake/: FindBotan.cmake  FindGLIB2.cmake  FindJsonCpp.cmake  Findsodium.cmake
icons/: README.md
src/: CMakeLists.txt  exceptions.h
src/api/: API.cpp  API.h  BlobAPI.cpp  BlobAPI.h  BlobTransfer.h  HttpClient.cpp  HttpClient.h  HttpClientOpenSSL.cpp  HttpClientmbedTLS.cpp  HttpClientwolfSSL.cpp  HttpManager.cpp  HttpManager.h  IdentAPI.cpp  IdentAPI.h
src/async/: future.h
src/contact/: Account.cpp  Account.h  Contact.cpp  Contact.h  backup.cpp  backup.h
src/encoding/: base32.h  base64.h  crypto.cpp  crypto.h  hex.h  pbkdf2-sha256.c  pbkdf2-sha256.h  pkcs7.h  sha256.cpp  sha256.h
src/include/: config.h  config.h.in
src/logging/: logging.cpp  logging.h
src/protocol/: protocol.cpp  protocol.h  session.cpp  session.h
src/protocol/data/: Blob.h  Client.h  Crypto.h  Group.h  Poll.h
src/protocol/packet/: Acknowledgement.cpp  Acknowledgement.h  KeepAlive.cpp  KeepAlive.h  Message.cpp  Message.h  MessageFlag.cpp  MessageFlag.h  Packet.cpp  Packet.h  Status.cpp  Status.h  message_id.h  messagetypes.h
src/protocol/packet/payloads/: MessagePayload.cpp  MessagePayload.h  PayloadBlob.cpp  PayloadBlob.h  PayloadControl.cpp  PayloadControl.h  PayloadGroup.cpp  PayloadGroup.h  PayloadGroupControl.cpp  PayloadGroupControl.h  PayloadPoll.cpp  PayloadPoll.h  PayloadText.cpp  PayloadText.h
src/socket/: socket.cpp  socket.h
src/threepl/: Buddy.cpp  Buddy.h  ContactStore.cpp  ContactStore.h  GroupStore.cpp  GroupStore.h  Logging.cpp  Logging.h  MessageHandler.cpp  MessageHandler.h  PrplHttpManager.cpp  PrplHttpManager.h  ThreeplConnection.cpp  ThreeplConnection.h  ThreeplImport.cpp  ThreeplImport.h  Transfer.cpp  Transfer.h
src/threepl/prpl/: actions.cpp  actions.h  buddy.cpp  buddy.h  chat.cpp  chat.h  commands.cpp  commands.h  connection.cpp  connection.h  im.cpp  im.h  list.cpp  list.h  threepl.cpp  threepl.h  xfer.cpp  xfer.h
src/types/: bytes.h  flags.h  formatstr.h  iter.h  ptr_array.h  slice.h
